fixed navbar z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ nav {
     position: relative;
     width: 100%;
     box-sizing: border-box;
+    z-index: 1000;
 }
 nav > * {
     flex: 1;
